# Graduation_project

./: Dockerfile  README.md  pyproject.toml  Описание ТЗ. Как должен работать скрапер.docx
feedback_analyzer/: manage.py
feedback_analyzer/feedback_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
feedback_analyzer/scraping/: forms.py  models.py  views.py
feedback_analyzer/scraping/templates/scraping/: scraping_results.html
feedback_analyzer/templates/: base_generic.html
feedback_analyzer/users/: models.py  validators.py  views.py
feedback_analyzer/users/migrations/: 0001_initial.py
feedback_analyzer/users/templates/: registration.html
feedback_analyzer/users/templates/registration/: login.html  register.html
web_scraper/: Pipfile  README.md  manage.py  pyproject.toml
web_scraper/scraping/: admin.py  apps.py  models.py  tasks.py
web_scraper/scraping/migrations/: 0001_initial.py
web_scraper/templates/: articles.html  base.html  change_password.html  edit_profile.html  home.html  register.html
web_scraper/web_scraper/: apps.py  celery.py  forms.py  settings.py  urls.py  views.py
