[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["NataliaStekolnikova <natalia.a.stekolnikova@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
